--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
+    "ipfs-http-client": "^54.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
@@ -49,6 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
