--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.1",
     "ipfs-http-client": "^54.0.1",
     "multer": "^1.4.3",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
@@ -52,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
