--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bootstrap": "^5.1.1",
     "ipfs-http-client": "^54.0.1",
     "multer": "^1.4.3",
-    "qrcode": "^1.5.0",
+    "qr-code-styling": "^1.6.0-rc.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
