--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
+    "dom-to-image": "^2.6.0",
     "ipfs-http-client": "^54.0.1",
     "multer": "^1.4.3",
     "qr-code-styling": "^1.6.0-rc.1",
