--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-dapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "https://dapp.lott.link",
   "dependencies": {
     "@metamask/eth-sig-util": "^4.0.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -59,5 +59,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "build": "^0.1.4",
+    "gh-pages": "^6.3.0"
+  }
 }
